FreeST/test/Programs/InvalidTests/Typing/multipleFuns/multipleFuns.fst

-- It doesn't really matter, it should not throw an error here
main : Int
main = 10

fun : Int -> Bool
fun x = True

fun : Int -> Int
fun x = 23
